# OpenProductionPlanner

./: .dockerignore  .env  Readme.md  build.sh  config.env  docker-compose.yml
Backend/: Dockerfile  hello.py
backend/: .dockerignore  CMakeLists.txt  Dockerfile  test.txt
backend/include/: cpp-httplib.hpp
backend/src/: DashboardManager.cpp  DashboardManager.h  DatabaseManager.cpp  DatabaseManager.h  HttpManager.cpp  HttpManager.h  MaschinenManager.cpp  MaschinenManager.h  PersonalManager.cpp  PersonalManager.h  PlanerManager.cpp  PlanerManager.h  ProductionManager.cpp  ProductionManager.h  ResourcenManager.cpp  ResourcenManager.h  RezeptManager.cpp  RezeptManager.h  SzenarioManager.cpp  SzenarioManager.h  _todo.txt  check.utf8  main.cpp
backend/src/supportFunctions/: stringTools.h
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: RestTest.vue
frontend/src/components/sidebar/: Sidebar.vue  SidebarLink.vue
frontend/src/components/table/: DataTable.vue
frontend/src/router/: index.js
frontend/src/views/: About.vue  Dashboard.vue  Home.vue  Personal.vue  Production.vue  Recipes.vue  Ressources.vue  Settings.vue
mysql_init/: create.sql
py-service/src/: main.py  requirements.txt
sql/: init.sql
